# MultiAgentMapping

./: .gitignore  .gitmodules  Idea.md  README.md  ind_pub.py  requirements.txt  run.bash  run_2.bash  run_single.bash  test.py  test_sub.py
Config/LIO_SAM/: scout_1_1.yaml  scout_2_2.yaml
Idea/: comparison.md  evaluation.md  single_vs_multi_robot_slam.md
Robots/scout_v2/: a.usd  b.usd  scout_1.usd  scout_1_1.usd  scout_1_1v.usd  scout_2.usd  scout_2_2.usd  scout_2_2v.usd  scout_3.usd  scout_3_3.usd  scout_3_3v.usd  scout_4.usd  scout_4_4.usd  scout_4_4v.usd  scout_v2_assembled.usd
Robots/scout_v2/MultiSense S21.STEP/: MultiSense-S21.usd
Robots/scout_v2/Ouster OS-1.STEP/: Ouster-OS-1-Assembly.usd
Robots/scout_v2/tray/: tray.usd
Worlds/: hospital.usd
isaacsim_extension/: README.md
project_config/: package.xml  setup.cfg  setup.py
project_config/config/LIO_SAM/: scout_1_1.yaml  scout_2_2.yaml  scout_3_3.yaml
project_config/config/Odom_ekf/: scout_1_1.yaml  scout_2_2.yaml  scout_3_3.yaml  scout_4_4.yaml
ros_packages/auto_explore/: README.md  package.xml  setup.py
ros_packages/auto_explore/auto_explore/: explore.py
ros_packages/auto_explore/launch/: explore.launch.py
ros_packages/distributed_mapper/: CMakeLists.txt  package.xml
ros_packages/distributed_mapper/include/distributed_mapper/: distributed_mapper_utils.hpp
ros_packages/distributed_mapper/include/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.hpp
ros_packages/distributed_mapper/include/pairwise_consistency_maximization/robot_measurements/: robot_local_map.hpp  robot_measurements.hpp
ros_packages/distributed_mapper/src/distributed_mapper/: distributed_mapper_utils.cpp  run_distributed_mapper.cpp
ros_packages/distributed_mapper/src/pairwise_consistency_maximization/robot_measurements/: robot_local_map.cpp
ros_packages/distributed_mapper_colcon/: CMakeLists.txt  package.xml
ros_packages/distributed_mapper_colcon/etc/ament_environment_hooks/: library_path.sh
ros_packages/distributed_mapper_colcon/include/distributed_mapper/: between_chordal_factor.hpp  distributed_mapper.hpp  evaluation_utils.hpp  run_distributed_mapper.hpp
ros_packages/distributed_mapper_colcon/include/pairwise_consistency_maximization/global_map/: global_map.hpp
ros_packages/distributed_mapper_colcon/include/pairwise_consistency_maximization/graph_utils/: graph_types.hpp  graph_utils_functions.hpp
ros_packages/distributed_mapper_colcon/include/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.hpp
ros_packages/distributed_mapper_colcon/include/pairwise_consistency_maximization/robot_measurements/: interrobot_measurements.hpp  robot_local_map.hpp
ros_packages/distributed_mapper_colcon/src/distributed_mapper/: distributed_mapper.cpp  evaluation_utils.cpp  run_distributed_mapper.cpp
ros_packages/distributed_mapper_colcon/src/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.cpp
ros_packages/distributed_mapper_colcon/src/pairwise_consistency_maximization/global_map/: global_map.cpp
ros_packages/distributed_mapper_colcon/src/pairwise_consistency_maximization/graph_utils/: graph_utils_functions.cpp
ros_packages/distributed_mapper_colcon/src/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.cpp
ros_packages/distributed_mapper_colcon/src/pairwise_consistency_maximization/robot_measurements/: interrobot_measurements.cpp  robot_local_map.cpp  robot_measurements.cpp
ros_packages/distributed_mapper_colcon/src/pairwise_consistency_maximization/third_parties/fast_max-clique_finder/src/: findClique.cpp  findClique.hpp  findCliqueHeu.cpp  graphIO.cpp  utils.cpp
ros_packages/distributed_slam/keyframe_generator/: CMakeLists.txt  package.xml
ros_packages/multiAgentMapping/: CMakeLists.txt  README.md  package.xml
ros_packages/multiAgentMapping/config/: params.yaml  params_scout_1_1.yaml  params_scout_2_2.yaml  params_scout_3_3.yaml  params_scout_4_4.yaml
ros_packages/multiAgentMapping/config/DomainBridge/: a_to_b.yaml  b_to_a.yaml
ros_packages/multiAgentMapping/config/DomainBridge/vizNode/: a.yaml  b.yaml
ros_packages/multiAgentMapping/config/rviz/: dist_mapping.rviz  globalViz_2.rviz  scout_1_1.rviz  scout_2_2.rviz
ros_packages/multiAgentMapping/include/multiAgentMapping/Distributed_Mapping/: subGraphsUtils.hpp
ros_packages/multiAgentMapping/include/multiAgentMapping/LIO_SAM/: utility.hpp
ros_packages/multiAgentMapping/include/multiAgentMapping/distributedMapping/: distributedMapping.hpp  subGraphParams.hpp
ros_packages/multiAgentMapping/include/multiAgentMapping/distributed_mapping/: descriptorBasis.hpp  distributedMapping.hpp  lidarIrisDescriptor.hpp  paramsServer.h  paramsServer.hpp
ros_packages/multiAgentMapping/launch/: multi_robot.launch.py  single_robot.launch.py
ros_packages/multiAgentMapping/launch/LIO_SAM/: run.launch.py  run_params.launch.py
ros_packages/multiAgentMapping/msg/: GlobalDescriptor.msg  LoopInfo.msg  NeighborEstimate.msg
ros_packages/multiAgentMapping/src/Distributed_Mapping/: subGraphsUtils.cpp
ros_packages/multiAgentMapping/src/LIO_SAM/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptimization.cpp
ros_packages/multiAgentMapping/src/distributedMapping/: distributedMapping.cpp  subGraphParams.cpp
ros_packages/multiAgentMapping/src/distributed_mapping/: distributedMapping.cpp  distributedMappingBasis.cpp  interLoopClosure.cpp  intraLoopClosure.cpp  lidarIrisDescriptor.cpp  loopClosureUtils.cpp  loopVisualizationNode.cpp  paramsServer.cpp  visualization.cpp
ros_packages/sensor_preprocessing/odom_ekf/: CMakeLists.txt  package.xml
ros_packages/sensor_preprocessing/pcl_ring_publisher/: CMakeLists.txt  README.md  package.xml
ros_packages/sensor_preprocessing/pcl_ring_publisher/launch/: ring_publisher.launch.py
ros_packages/sensor_preprocessing/pcl_ring_publisher/src/: ring_publisher.cpp
ros_packages/tf/tf_static_publisher/: CMakeLists.txt  README.md  package.xml
ros_packages/tf/tf_static_publisher/src/: static_tf_publisher.cpp
(+83 files in other folders)
